# CMakeTemplates

./: .gitignore  CMakeLists.txt  README.md
HelloWorldCLI/: CMakeLists.txt  README.md  main.cpp
HelloWorldGUI/: CMakeLists.txt  README.md  gui.cpp  gui.fbp  gui.h  main.cpp  main.h
